Side categorical tree with interactions (field selection, drag-and-drop) finished. Closes #34.

--- a/app/views/dataset/dataSetFullMenu.scala.html
+++ b/app/views/dataset/dataSetFullMenu.scala.html
@@ -9,9 +9,13 @@
 @import views.html.filter.categoricalTree
 @import views.html.filter.jsTreeImport
 
-@(dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo], dataSetRouter: DataSetRouter)(implicit webContext: WebContext)
+@(
+    dataSpaceMetaInfos: Traversable[DataSpaceMetaInfo],
+    dataSetRouter: DataSetRouter)(
+    implicit webContext: WebContext
+)
 
-@categoryTreeNodeSelectedJsFun = {
+@treeNodeDoubleClickedJsFun = {
     function(node) {
         if (node.type.startsWith("field-")) {
             var text = node.text
@@ -36,7 +40,11 @@
     <hr id="data-set-menu-separator" onclick="resizeDataSpaceMenu();"/>
 
     <div id="categorical-tree-menu" class="categorical-tree-menu">
-        @categoricalTree("sideCategoricalTree", Right(dataSetRouter.getCategoriesWithFieldsAsTreeNodes(Left(Nil))), Some(categoryTreeNodeSelectedJsFun))
+        @categoricalTree(
+            "sideCategoricalTree",
+            Right(dataSetRouter.getCategoriesWithFieldsAsTreeNodes(Left(Nil))),
+            nodeDoubleClickedFun = Some(treeNodeDoubleClickedJsFun)
+        )
     </div>
 </div>
 
@@ -45,68 +53,49 @@
         $("#sideCategoricalTree").on('open_node.jstree', function (event, data) {
             data.instance.set_type(data.node, 'category-open');
 
-            var leafs = $(event.target).find(".jstree-leaf")
-            $.each(leafs, function(index, leaf) {
-                var node = $("#sideCategoricalTree").jstree(true).get_node(leaf.id)
-
-                if (node.type != "category") {
-                    $(leaf).attr('dragabble', 'true');
-
-                    var text = node.text
-                    var nonNullCount = node.data.nonNullCount
-                    if (nonNullCount) {
-                        var lastIndex = text.lastIndexOf(" (" + nonNullCount + ")")
-                        text = text.substring(0, lastIndex)
-                    }
-
-                    $(leaf).on('dragstart', function (evt) {
-                        evt.originalEvent.dataTransfer.setData("id", node.id);
-                        evt.originalEvent.dataTransfer.setData("text", text);
-                        evt.originalEvent.dataTransfer.setData("type", node.type);
-                    });
-                }
-            })
+            const leafs = $(event.target).find(".jstree-leaf")
+            addDragAndDropSupport(leafs)
         });
-
-        $("#sideCategoricalTree").on('search.jstree', function (ndes, str, res) {
-            console.log(str)
-            // console.log(str)
-            // console.log(res)
-
-            $.each(str.nodes, function(index, leaf) {
-                var node = $("#sideCategoricalTree").jstree(true).get_node(leaf.id)
-
-                if (node.type != "category") {
-                    console.log(leaf.id)
-                    console.log(node)
-
-                    var text = node.text
-                    var nonNullCount = node.data.nonNullCount
-                    if (nonNullCount) {
-                        var lastIndex = text.lastIndexOf(" (" + nonNullCount + ")")
-                        text = text.substring(0, lastIndex)
-                    }
-
-                    var lf = $("#sideCategoricalTree").find("#" + leaf.id)[0]
-                    console.log(lf)
-                    $(lf).attr('dragabble', 'true');
-                    $(lf).on('dragstart', function (evt) {
-                        console.log('dragstart')
-                        console.log(text)
-                        evt.originalEvent.dataTransfer.setData("id", node.id);
-                        evt.originalEvent.dataTransfer.setData("text", text);
-                        evt.originalEvent.dataTransfer.setData("type", node.type);
-                    });
-                }
-            })
-        })
 
         $("#sideCategoricalTree").on('close_node.jstree', function (event, data) {
             data.instance.set_type(data.node, 'category');
         });
 
+        $("#sideCategoricalTree").on('search.jstree', function (ndes, str, res) {
+            setTimeout(
+                function(){
+                    const leafs = $("#sideCategoricalTree").find(".jstree-leaf")
+                    addDragAndDropSupport(leafs)
+                },
+                1000
+            );
+        })
+
         $("#sideCategoricalTree").jsTreeWidget('init');
     })
+
+    function addDragAndDropSupport(leafs) {
+        $.each(leafs, function(index, leaf) {
+            var node = $("#sideCategoricalTree").jstree(true).get_node(leaf.id)
+
+            if (node.type != "category") {
+                $(leaf).attr('draggable', 'true');
+
+                var text = node.text
+                var nonNullCount = node.data.nonNullCount
+                if (nonNullCount) {
+                    var lastIndex = text.lastIndexOf(" (" + nonNullCount + ")")
+                    text = text.substring(0, lastIndex)
+                }
+
+                $(leaf).on('dragstart', function (evt) {
+                    evt.originalEvent.dataTransfer.setData("id", node.id);
+                    evt.originalEvent.dataTransfer.setData("text", text);
+                    evt.originalEvent.dataTransfer.setData("type", node.type);
+                });
+            }
+        })
+    }
 
     function resizeDataSpaceMenu() {
         const currentSpaceHeight = $("#data-space-menu").prop('style')['height'];
