--- a/app/views/datasetimport/settingPanel.scala.html
+++ b/app/views/datasetimport/settingPanel.scala.html
@@ -25,6 +25,7 @@
                 @inputText("dataSetImport", "setting.defaultCumulativeCountFieldName", form)
                 @select("dataSetImport", "setting.filterShowFieldStyle", form, enumToValueString(FilterShowFieldStyle), true)
                 @checkbox("dataSetImport", "setting.filterShowNonNullCount", form)
+                @checkbox("dataSetImport", "setting.showSideCategoricalTree", form)
             </div>
         </div>
     </div>
