--- a/app/views/filter/filter.scala.html
+++ b/app/views/filter/filter.scala.html
@@ -40,7 +40,7 @@
     @conditionPanel(filter, filterLabel)
 
     <span class="filter-part">
-        <button id="showAddConditioButton" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" title="Add Filter Condition">
+        <button id="showAddConditionButton" type="button" class="btn btn-sm btn-default" data-toggle="tooltip" title="Add Filter Condition">
             <span class="glyphicon glyphicon-plus"></span>
         </button>
 
