--- a/app/views/datasetsetting/elements.scala.html
+++ b/app/views/datasetsetting/elements.scala.html
@@ -34,6 +34,7 @@
 )
 
 @checkbox("dataSetSetting", "filterShowNonNullCount", form)
+@checkbox("dataSetSetting", "showSideCategoricalTree", form)
 
 @inputTypeahead(
     "dataSetSetting",
