Support for a custom controller class name.

--- a/app/views/datasetimport/settingPanel.scala.html
+++ b/app/views/datasetimport/settingPanel.scala.html
@@ -26,6 +26,7 @@
                 @select("dataSetImport", "setting.filterShowFieldStyle", form, enumToValueString(FilterShowFieldStyle), true)
                 @checkbox("dataSetImport", "setting.filterShowNonNullCount", form)
                 @checkbox("dataSetImport", "setting.showSideCategoricalTree", form)
+                @inputText("dataSetImport", "setting.customControllerClassName", form)
             </div>
         </div>
     </div>
