Introducing locked flag for users and checking if unset before every login. Closes #32

--- a/app/views/user/elements.scala.html
+++ b/app/views/user/elements.scala.html
@@ -138,6 +138,8 @@
 
 @inputText("user", "name", form)
 @inputText("user", "email", form)
+@checkbox("user", "locked", form)
+
 @labelValue("user", "Roles"){
     @dynamicStringTable("role", form.value.map(_.roles).getOrElse(Nil))
 }
