--- a/app/views/layout/home.scala.html
+++ b/app/views/layout/home.scala.html
@@ -1,4 +1,5 @@
 @import views.html.layout.carousel
+@import views.html.layout.main
 @import org.incal.play.controllers.WebContext
 @import org.incal.play.controllers.WebContext._
 @import org.incal.play.routes.CustomDirAssets
