Description added to data set setting

--- a/app/views/datasetimport/settingPanel.scala.html
+++ b/app/views/datasetimport/settingPanel.scala.html
@@ -26,6 +26,7 @@
                 @select("dataSetImport", "setting.filterShowFieldStyle", form, enumToValueString(FilterShowFieldStyle), true)
                 @checkbox("dataSetImport", "setting.filterShowNonNullCount", form)
                 @checkbox("dataSetImport", "setting.showSideCategoricalTree", form)
+                @textarea("dataSetImport", "setting.description", form, Seq('cols -> 20, 'rows -> 5))
                 @inputText("dataSetImport", "setting.customControllerClassName", form)
             </div>
         </div>
