--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -1,6 +1,6 @@
 @import org.incal.play.util.WebUtil.matchesPath
 @import play.api.i18n.Messages
-@import be.objectify.deadbolt.scala.views.html.{subjectPresent, subjectPresentOr, restrict, pattern}
+@import be.objectify.deadbolt.scala.views.html.{subjectPresent, subjectPresentOr, restrict, pattern, dynamic}
 @import org.incal.play.security.SecurityRole
 @import org.incal.play.controllers.WebContext
 @import org.incal.play.controllers.WebContext._
@@ -43,11 +43,11 @@
         <div id="navigation" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 @subjectPresent() {
-                    @listItem(routes.AppController.dataSets(), "Studies", Some(1))
+                    @listItem(routes.AppController.dataSets(), webContext.msg("dataSets.menu"), Some(1))
                 }
                 @restrict(roles = List(Array(SecurityRole.admin))) {
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ML<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@webContext.msg("ml.menu")<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             @listItem(mlRoutes.ClassifierController.find(), "Classifiers")
                             @listItem(mlRoutes.RegressorController.find(), "Regressors")
@@ -57,7 +57,7 @@
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            Admin<span class="caret"></span></a>
+                            @webContext.msg("admin.menu")<span class="caret"></span></a>
                         <ul class="dropdown-menu multi-level">
                             @listItem(dataSetImportRoutes.DataSetImportController.find(), "Data Set Imports")
                             @listItem(dataSetTransformationRoutes.DataSetTransformationController.find(), "Data Set Transformations")
@@ -96,16 +96,16 @@
                 @subjectPresent() {
                     <li id="linksDropdownToggle" class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            Links<span class="caret"></span>
+                            @webContext.msg("links.menu")<span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                         </ul>
                     </li>
                 }
 
-                @listItem(routes.DocumentationController.intro(), "Docs / Help")
+                @listItem(routes.DocumentationController.intro(), webContext.msg("docs.menu"))
 
-                @listItem(routes.AppController.contact(), "Contact", Some(1))
+                @listItem(routes.AppController.contact(), webContext.msg("contact.menu"), Some(1))
 
                 <li>
                     <!-- show login link, if no subject present; otherwise show user dropdown list -->
@@ -119,7 +119,7 @@
                             </ul>
                         </li>
                     }{
-                        <a href="@routes.AuthController.login">Login&#160;&#160;&#160;<span class="glyphicon glyphicon-log-in"></span></a>
+                        <a href="@routes.AuthController.login">Login&#160;&#160;&#160; @webContext.request.subject.map(_.identifier).getOrElse("N/A")<span class="glyphicon glyphicon-log-in"></span></a>
                     }
                 </li>
             </ul>
