Lock missing LDAP users action added to the Admin menu and a warning added to 'Purge Missing'. Closes #62.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -150,11 +150,11 @@ tr.clickable-row {
 }
 
 tr.clickable-row:hover {
-    background-color: darkgray;
+    background-color: #C0C0C0;
 }
 
 .table-striped > tbody > tr.clickable-row:nth-of-type(odd):hover {
-    background-color: darkgray;
+    background-color: #C0C0C0;
 }
 
 .typeahead-large.tt-input,
