Data space/study create and relocate functions added to the admin studies home screen. Closes #56

--- a/app/views/dataspace/create.scala.html
+++ b/app/views/dataspace/create.scala.html
@@ -17,5 +17,5 @@
 	form = form,
 	elements = elements(form, 0, 0, Map[String, Int](), None),
 	saveCall = dataSpaceMetaInfoRoutes.save(),
-	listCall = dataSpaceMetaInfoRoutes.listAll()
+	listCall = org.ada.web.controllers.routes.AppController.dataSets()
 )
