JSON export fixing - display stream field type lookout. Closes #66.

--- a/app/views/dataset/table.scala.html
+++ b/app/views/dataset/table.scala.html
@@ -37,7 +37,7 @@
                 @dataSetExportDropdown(
                     dataSetName,
                     dataSetRouter.exportTableAsCsv(Nil, _, true, None, _, _, true, true, false, Nil),
-                    dataSetRouter.exportTableAsJson(Nil, _, _, true, false, Nil),
+                    dataSetRouter.exportTableAsJson(Nil, _, _, false, false, Nil),
                     setting.filterShowFieldStyle,
                     None,
                     Some(selectedOnlyElement)
