--- a/app/views/dataset/view/viewExportDropdown.scala.html
+++ b/app/views/dataset/view/viewExportDropdown.scala.html
@@ -34,7 +34,7 @@
 @dataSetExportDropdown(
     dataSetName,
     dataSetRouter.exportViewAsCsv(dataViewId, _, true, None, _, _, true, true),
-    dataSetRouter.exportViewAsJson(dataViewId, _, _, true),
+    dataSetRouter.exportViewAsJson(dataViewId, _, _, false),
     showFieldStyle,
     Some(extraDropdownItems)
 )
